code cleanup and add noindex, nofollow

--- a/kwon.nyc/colophon/index.html
+++ b/kwon.nyc/colophon/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Colophon &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I use Hugo and DeployHQ to generate and deploy the site, respectively, and Github to host the source code (changelog here). Locally, I use Sublime Text to write and edit code, as well as Markdown files which constitute the content. (More gear and tech here.)
 This cool illustration of my visage was done by my friend Leigh Peterson, who also taught me how to bathe a cat. (Those were two separate favors.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/colophon/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
