--- a/kwon.nyc/notes/artificially-intelligent-thoughts/index.html
+++ b/kwon.nyc/notes/artificially-intelligent-thoughts/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Artificially Intelligent Thoughts &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I am reading and hearing a lot of discourse about AI, machine learning, and more specifically, ChatGPT. It seems like a lot of people have a lot of opinions and things to say, and, like ChatGPT itself, they seem to be often wrong but never in doubt1. From what I can tell it seems like a lot of it is noise (generally when people make blanket statements about AI being bad and dangerous) but there is some real signal (generally when people use more precise verbiage, detailed use cases, and less sensationalized/more nuanced thoughts and conclusions such as potential for bias at a large scale with large language models and generative AI causing harm2).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/artificially-intelligent-thoughts/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
