--- a/kwon.nyc/notes/coffee/index.html
+++ b/kwon.nyc/notes/coffee/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Coffee &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Coffee is so good.
 In addition to being physiologically and emotionally dependent on caffeine, I genuinely enjoy coffee. I have accumulated too many coffeemaking implements over the years, including but not limited to a French press, burr grinder, espresso machine, pourover cone, cold brew system, and probably others I&rsquo;m forgetting that I use less frequently and are collecting dust in a cabinet. I started drinking coffee in college, mainly out of curiosity—I had a friend who said they couldn&rsquo;t function without coffee, though I perceived them as a very functional person, and I thought, &ldquo;hey, college is the time when you experiment with drugs, right?">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/coffee/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
