--- a/kwon.nyc/notes/distracted/index.html
+++ b/kwon.nyc/notes/distracted/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Distracted &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
@@ -12,7 +12,6 @@
 The world seems to be opening back up now that we are no longer surging (or are just between surges?), but I wouldn&rsquo;t say that I feel normal again.
 Lack of focus has been one of the most pronounced negative effects. For example, I sat down with a cup of coffee and opened up a text editor to write this note about an hour ago and have since abandoned the window no fewer than seven times (see Appendix).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/distracted/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
