--- a/kwon.nyc/notes/in-between-moments/index.html
+++ b/kwon.nyc/notes/in-between-moments/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>In-between Moments &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="In addition to my attention span, another pandemic-related loss not immediately obvious to me (probably because I was too worried about all the other losses, like the human lives, and the general erosion of mental health, and the ability to pretend that the institutions holding up our society would be able to take care of our most vulnerable), which I am only now realizing, has been the in-between moments.
 The 30 minutes between leaving work and meeting up with a friend for drinks is an in-between moment.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/in-between-moments/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
