--- a/kwon.nyc/notes/newyorkiversary/index.html
+++ b/kwon.nyc/notes/newyorkiversary/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Newyorkiversary &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="June 2021 marks my eleventh year in New York City. I wasn&rsquo;t supposed to be here this long. The Plan™ was never to stay in New York for this long. The Plan™ was to come here for five years to learn how to be a surgeon, then go back to Chicago and be a surgeon and live happily ever after.
 When I was younger, I didn&rsquo;t think that carefully about my future, which is kind of terrifying to think about now, how I made decisions about my life without really thinking about them.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/newyorkiversary/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
