--- a/kwon.nyc/notes/noise/index.html
+++ b/kwon.nyc/notes/noise/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Digital Noise &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I&rsquo;m getting worn down by all the digital noise. By digital noise I mean the constant barrage of alerts, notifications, pings, email subscriptions I didn&rsquo;t sign up for, email subscriptions I DID sign up for but regret doing so, all the inputs that come through my connected devices.
 Sometimes I secretly wish I could be one of those people who moves off the grid, abandons the smartphone, deletes all social media, and lives a quiet minimalist life in the woods.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/noise/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
