--- a/kwon.nyc/notes/optimize/index.html
+++ b/kwon.nyc/notes/optimize/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Optimize &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="After I quit medicine and went corporate (as corporate as tech startups can be, which I guess depends on your vantage point; for me it was and is extremely corporate coming from doctoring), I got really into it and became particularly fascinated to learn how business leaders operate and spend their time (at work and in life) in order to be the most efficient and effective they can be. I guess a lot of people who came up in corporate work (and maybe the culture at large which is often dictated by creatives who may pooh-pooh the corporate life) think MASSIVE EYEROLL when they hear what the latest tech bro thinkboi has to say about optimizing their life and their time, but I actually found it pretty refreshing that in business a spade is called a spade and that spade is a dollar and nobody pretends that we aren&rsquo;t trying to make money.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/optimize/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
