--- a/kwon.nyc/notes/outdoors/index.html
+++ b/kwon.nyc/notes/outdoors/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Outdoors &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I spent some time in the Bay Area this past week and did a vigorous hike (among other things). I was made to believe it would be more of a &ldquo;nature walk&rdquo; but this one, Mission Peak, had a steep grade and full exposure to the elements, and ended up being about 3.5 hours and close to 30,000 steps. I haven&rsquo;t challenged myself physically like that in a long time so I was pleasantly surprised that I survived.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/outdoors/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
