--- a/kwon.nyc/notes/pushing-pixels/index.html
+++ b/kwon.nyc/notes/pushing-pixels/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Pushing Pixels &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I made some minor CSS tweaks on mostly spacing here that have bothered me since the beginning (though not enough to get me to fix them until now, hehe).
 This is extreme minutiae and probably doesn&rsquo;t even warrant a note here but I did spend over an hour working on this so I feel like I have to document it. (I woke up at 5 am and couldn&rsquo;t sleep so I journaled and internetted for a while before deciding to fire up the old cascading stylesheet.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/pushing-pixels/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
