--- a/kwon.nyc/notes/re-re-reading/index.html
+++ b/kwon.nyc/notes/re-re-reading/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Re: Re-reading &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Lately I feel that more often I&rsquo;d rather re-read a book I&rsquo;ve already read before (and enjoyed) than pick up a new one. Maybe it&rsquo;s a form of risk aversion (I don&rsquo;t know if I&rsquo;m going to like a new book, so I&rsquo;d rather read an old one). Maybe it&rsquo;s something that comes with aging. I&rsquo;ve always loved reading books, since I was a kid and my parents would take me to the library and every single time I would check out the maximum number of books (thirty)1, read them all, return them within the two-week checkout period, and check out another 30.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/re-re-reading/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
