--- a/kwon.nyc/notes/transferrable-skills/index.html
+++ b/kwon.nyc/notes/transferrable-skills/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Kwon.nyc</title>
 
 <meta name="keywords" content="" />
@@ -12,7 +12,6 @@
 &ldquo;I&rsquo;m a [blank], but I want to be a [&lsquo;nother blank]&rdquo;
  what are transferrable skills The patient with a tension pneumothorax who couldn&rsquo;t breathe and had impending respiratory failure but refused to sign a consent form for me to place a life-saving chest tube? That&rsquo;s getting buy-in from key stakeholders. The time I went to the diner across the street from the hospital to get a box of sugar to sprinkle on a prolapsed rectum in the ER to help reduce it?">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/transferrable-skills/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
