--- a/kwon.nyc/notes/tuesday/index.html
+++ b/kwon.nyc/notes/tuesday/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Tuesday &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="The cadence of life is a little different now that I live in Brooklyn and work from home. In my 12 years in New York City, I have:
  lived in Brooklyn and worked in Brooklyn lived in Brooklyn and worked in Manhattan (the worst overall) lived in Manhattan and worked in Manhattan lived in Manhattan and worked from home lived in Brooklyn and worked from home  and the one that feels most like not working at all is living in Brooklyn and working from home.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/tuesday/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
