--- a/kwon.nyc/notes/unpolished/index.html
+++ b/kwon.nyc/notes/unpolished/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>unpolished &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="when visiting my parents a few weeks ago, i picked up one of the books on my mom’s bookshelf, the first of barack obama’s presidential memoirs. i started reading it, but it was kind of hefty and i was only going to be there for a week and didn’t want to start a book i couldn’t finish, so i put it down and picked up another one instead (which, turns out i couldn’t finish that one, either, so maybe i didn’t have to abandon the obama book).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/unpolished/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
