--- a/kwon.nyc/links/index.html
+++ b/kwon.nyc/links/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Links &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Internet friends and people I like:
  Daniel Bogan / Uses This in Melbourne Leigh Peterson in Hamilton, Ontario Chris Glass in Cincinnati Marianne in Connecticut Max in Brooklyn Eric Hu in Brooklyn Racquel in Brooklyn Rands in Los Gatos, CA Jung Yun (and Maybe) in Baltimore Sam Mok in Toronto Paul Graham in England  ">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/links/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
