--- a/kwon.nyc/notes/2022-part-2/index.html
+++ b/kwon.nyc/notes/2022-part-2/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>2022 in review, part 2 &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
@@ -12,7 +12,6 @@
 To recap: I audited where I spent my time (loosely) and where I spent my money (incredibly precisely) this past year, in an effort to understand what I really value and to be more mindful and aware of where I&rsquo;m spending these limited resources.
 First, the nondiscretionary chunks of my income go towards taxes, student loan payments, and rent (in descending order of relative amounts).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/2022-part-2/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
