--- a/kwon.nyc/notes/chili-oil/index.html
+++ b/kwon.nyc/notes/chili-oil/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Chili Oil &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="During the darkest parts of pandemic lockdown there was not a lot to do or look forward to so I put a lot of time and energy into making elaborate meals entirely from scratch. (It&rsquo;s on my neverending to-do list for this website to make some sort of photo gallery of all those meals for posterity, but for now here we are.) Now that I have settled into a new(ish) normal(ish), where thankfully there are other things with which to occupy my time than food prep, I have become a bit more of a utilitarian eater, in that I am less concerned with ✨ thoughtful complex flavorful meals that are time-consuming to prepare ✨ and instead more concerned with 🤜 getting sustenance into my gastrointestinal system 🤛.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/chili-oil/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
