--- a/kwon.nyc/notes/chinatown-breakfast/index.html
+++ b/kwon.nyc/notes/chinatown-breakfast/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Chinatown Breakfast &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="When we lived in Tribeca, I could walk to Chinatown for breakfast. In general I am a morning person who avoids crowds and noise where possible1, so I especially enjoyed being in the usually crowded and noisy neighborhood when it was on the quieter side with mostly just the residents of the neighborhood out and about, getting ready to open shops and stands and whatnot. You can get a great breakfast—you can get great food at any meal or snacktime—which is too often classified as &ldquo;cheap eats&rdquo; just because the prices are generally very reasonable (which feels pretty reductive, and dismissive of the skill required to consistently make a perfect soup dumpling or pumpkin bun or hand-pulled noodles or what have you).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/chinatown-breakfast/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
