--- a/kwon.nyc/notes/cooperate/index.html
+++ b/kwon.nyc/notes/cooperate/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Cooperate &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="We joined the food co-op. I worked my first shift the other night (after work work). You choose from available shifts and sign up for the kind of work you might want to do. I chose cleaning. I had been somewhat apprehensive about working the shift, not because it was work, or even that it was work I wasn&rsquo;t willing to do or anything, but moreso that it was a New Thing to do and it had been a while since I had done a New Thing.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/cooperate/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
