--- a/kwon.nyc/notes/early-bird/index.html
+++ b/kwon.nyc/notes/early-bird/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Early Bird &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I have been doing a Thing™ lately where I let the morning light wake me up instead of an alarm. Currently I am on an approximately two week streak of waking up at sunrise, and because the bedroom faces east, this means I have been waking up around 5:30 am. (Voluntarily!)
 I wish I were one of those people who could function on 5 or 6 hours of sleep, but alas, somewhat embarrassingly I need a full 8 to 9 in order to really feel rested.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/early-bird/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
