--- a/kwon.nyc/notes/flashback/index.html
+++ b/kwon.nyc/notes/flashback/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Flashback &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="This past weekend I met up with a few of my former colleagues from residency for dinner and drinks. It felt a little bit like a meetup with high school friends might feel, if you spent high school removing gallbladders and incising and draining abscesses. (Maybe you did. I don&rsquo;t know your life.)
 Having a chance to confront and reflect on my former self in a controlled environment—in this case, a contemporary Mexican restaurant—was not a bad exercise.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/flashback/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
