--- a/kwon.nyc/notes/grey-matters/index.html
+++ b/kwon.nyc/notes/grey-matters/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Grey Matters &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I read that Noah Grey, the creator of the blogging software Greymatter, recently resurfaced on the internet because he was losing his home to foreclosure and had set up a GoFundMe.
 I went into a little bit of a rabbit hole reading about Noah and what he had been up to, and it made me quite nostalgic. My first blog, circa 2001, was built with Greymatter. The internet was different back then (she says, rocking gently in her rocking chair on the porch, occasionally pausing to yell at children to get off her lawn).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/grey-matters/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
