--- a/kwon.nyc/notes/language/index.html
+++ b/kwon.nyc/notes/language/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Language &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
@@ -12,7 +12,6 @@
 What happened? Announcers were trained to avoid using gendered language, such as “Ladies and gentlemen,” and instead use greetings like “Attention passengers” or “Good morning everyone” prior to making an announcement.
 Okay, so it wasn&rsquo;t earth-shattering. But I thought it was a great example of a small, easy, tangible way to be more inclusive, without being overly fussy or political about it.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/language/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
