--- a/kwon.nyc/notes/liminal/index.html
+++ b/kwon.nyc/notes/liminal/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Liminal &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Sometimes I walk around and do other things while brushing my teeth (which I know I&rsquo;m probably not supposed to do but I do it anyway, like using Q-tips to clean my ears) and the other night I was winding down for the evening, brushing my teeth and zoning out while walking around the apartment and I noticed someone1 had left the light on in my home office and it kinda looked like a liminal space:">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/liminal/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
