--- a/kwon.nyc/notes/lo-fi-changelog/index.html
+++ b/kwon.nyc/notes/lo-fi-changelog/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Lo-fi changelog &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="I made a changelog.
 This was a fun little morning project for me. I&rsquo;ve seen others do a thing where the changelog is simply a list of all commit messages in reverse chronological order, so I decided to try it. With any &ldquo;small&rdquo; coding project, I find that I generally grossly underestimate the time it will take to accomplish a seemingly simple thing, but I learn a lot and also have fun with all the side quests.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/lo-fi-changelog/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
