--- a/kwon.nyc/notes/power-moves/index.html
+++ b/kwon.nyc/notes/power-moves/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Power Moves &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Yesterday one of my colleagues in a (virtual) meeting reportedly picked up a canister of coarse sea salt, announced &ldquo;I&rsquo;m just snacking,&rdquo; and proceeded to eat the salt, which confused and maybe frightened the other meeting attendees.
 It reminded me of the time I was rounding with my interns and medical students in the recovery room after scrubbing out of a long case and I was hungry so I pulled an apple out of my white coat pocket, ate most of it, noticed that there weren&rsquo;t any trash cans close by, and so I ate the core and seeds as well and then deposited the stem in the breast pocket of my white coat to discard later.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/power-moves/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
