--- a/kwon.nyc/notes/setup/index.html
+++ b/kwon.nyc/notes/setup/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Setup &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="One of the top priorities when moving to Brooklyn was to have more space, particularly to have dedicated workspace. In our previous apartment, my office was a corner of the bedroom, which I was grateful to have, but also over time resentful. I love my work and my job (probably a litle too much), but seeing my workspace as the first thing upon waking and the last before sleep made it hard for my brain to rest.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/setup/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
