--- a/kwon.nyc/notes/socks/index.html
+++ b/kwon.nyc/notes/socks/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Hon. Ketanji Brown Jackson&#39;s husband&#39;s socks &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
@@ -14,7 +14,6 @@
  Hon. Ketanji Brown Jackson&rsquo;s husband&rsquo;s sock
   I&rsquo;m not quite sure what the design is (looks like some kind of illustration of a face), but what I do know is that it is a funky sock.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/socks/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
