--- a/kwon.nyc/notes/summer-ride/index.html
+++ b/kwon.nyc/notes/summer-ride/index.html
@@ -2,15 +2,14 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Summer Ride &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="It&rsquo;s the good part of summer right now, the part where it&rsquo;s warm and sunny and the days are long but it hasn&rsquo;t gotten too humid out. I went on a nice bike ride yesterday morning along a route I used to take years ago when I first moved to Brooklyn that I haven&rsquo;t done since. Truthfully I have not been riding my bike as much as I used to (and I used to ride it EVERYWHERE).">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/summer-ride/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
