--- a/kwon.nyc/now/index.html
+++ b/kwon.nyc/now/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="auto">
 
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
+
 <title>Now &bull; Kwon.nyc</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="Since my last update to this page in February,
  Spring has passed, summer has nearly passed. I have been commuting into the office 3 or 4 days a week (more than the 2 days required) which has been really helpful for my productivity and general well-being. I got Covid (again 😩 this was my third bout). I took two days off work, drank a lot of soup, and watched all five seasons of the show Insecure.">
 <meta name="author" content="">
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/now/" />
 <link href="/assets/css/stylesheet.min.e7739bcd323adffb765ec3e974c3917f105615f6e5c494e5c99bd31d67e9fd9e.css" integrity="sha256-53ObzTI63/t2XsPpdMORfxBWFfblxJTlyZvTHWfp/Z4=" rel="preload stylesheet"
