--- a/sites/projects.kwon.nyc/public/internet-is-fun/index.html
+++ b/sites/projects.kwon.nyc/public/internet-is-fun/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="auto">
 
 <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="/css/internet-is-fun.css">
 <link rel="stylesheet" href="https://use.typekit.net/gql5ntq.css">
 <title>The internet used to be fun</title>
@@ -10,7 +11,7 @@
 <body id="top">
     <main class="main">
 
-<h1 id="the-spaninternetspan-used-to-be-fun">The <span>internet</span> used to be ✨fun✨</h1>
+<h1 id="the-spaninternetspan-used-to-be-x2728funx2728">The <span>internet</span> used to be ✨fun✨</h1>
 <p>I&rsquo;ve been meaning to write some kind of Important Thinkpiece™ on the glory days of the early internet, but every time I sit down to do it, I find another, better piece that someone else has already written. So for now, here&rsquo;s a collection of articles that to some degree answer the question “Why have a personal website?” with &ldquo;Because it&rsquo;s fun, and the internet used to be fun.&rdquo;</p>
 <p>If you&rsquo;ve written something that feels like it belongs here—especially if your voice is one that&rsquo;s frequently underrepresented—I&rsquo;d be interested to read it! Holler at me via email (kwon at fastmail.com), or on Mastodon (<a href="https://mastodon.social/@rjkwon">mastodon.social/@rjkwon</a>).</p>
 
